crates/bitnet-tokenizers/tests/snapshots/snapshot_tokenizer_config__tokenizer_config_bitnet_style.snap
---
source: crates/bitnet-tokenizers/tests/snapshot_tokenizer_config.rs
expression: cfg
---
{
  "model_type": "bitnet",
  "vocab_size": 32064,
  "pre_tokenizer": null,
  "add_bos": true,
  "add_eos": true,
  "add_space_prefix": true,
  "byte_fallback": true,
  "bos_token_id": 1,
  "eos_token_id": 2,
  "pad_token_id": null,
  "unk_token_id": 0,
  "vocabulary": null,
  "bpe_merges": null
}
