crates/bitnet-tokenizers/tests/snapshots/snapshot_tokenizer_config__tokenizer_config_default_json.snap
---
source: crates/bitnet-tokenizers/tests/snapshot_tokenizer_config.rs
expression: "TokenizerConfig::default()"
---
{
  "model_type": "",
  "vocab_size": 0,
  "pre_tokenizer": null,
  "add_bos": false,
  "add_eos": false,
  "add_space_prefix": false,
  "byte_fallback": false,
  "bos_token_id": null,
  "eos_token_id": null,
  "pad_token_id": null,
  "unk_token_id": null,
  "vocabulary": null,
  "bpe_merges": null
}
