crates/bitnet-tokenizers/tests/snapshots/snapshot_tokenizer_config__tokenizer_config_gpt2_style.snap
---
source: crates/bitnet-tokenizers/tests/snapshot_tokenizer_config.rs
expression: cfg
---
{
  "model_type": "gpt2",
  "vocab_size": 50257,
  "pre_tokenizer": "ByteLevel",
  "add_bos": false,
  "add_eos": false,
  "add_space_prefix": false,
  "byte_fallback": false,
  "bos_token_id": null,
  "eos_token_id": 50256,
  "pad_token_id": null,
  "unk_token_id": null,
  "vocabulary": null,
  "bpe_merges": null
}
