crates/bitnet-tokenizers/tests/snapshots/snapshot_tokenizer_config__tokenizer_config_llama_special_tokens.snap
---
source: crates/bitnet-tokenizers/tests/snapshot_tokenizer_config.rs
expression: cfg
---
{
  "model_type": "llama",
  "vocab_size": 32000,
  "pre_tokenizer": null,
  "add_bos": true,
  "add_eos": false,
  "add_space_prefix": false,
  "byte_fallback": false,
  "bos_token_id": 1,
  "eos_token_id": 2,
  "pad_token_id": 0,
  "unk_token_id": 3,
  "vocabulary": null,
  "bpe_merges": null
}
