crates/bitnet-tokenizers/tests/snapshots/snapshot_tokenizer_config__tokenizer_config_special_tokens.snap
---
source: crates/bitnet-tokenizers/tests/snapshot_tokenizer_config.rs
expression: "format!(\"bos={:?} eos={:?} pad={:?} unk={:?}\", cfg.bos_token_id,\ncfg.eos_token_id, cfg.pad_token_id, cfg.unk_token_id,)"
---
bos=None eos=None pad=None unk=None
